[package]
name = "bruno-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
axum = "0.6.1"
flexi_logger = "0.24.2"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }